HelloUltraviolet/Fixtures/RejectedSource/Expressions/EnumEmpty/Expected.uv
//! Expected diagnostic metadata for the EnumEmpty rejected-source specimen.

expectedDiagnostic("E-TYP-2001", "Enum-Empty-Err")
